{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 131,
  "lineage": "ee4837cf-4560-5de3-a97d-58a505c63d0d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ipfs_vpc_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030c6b591337b9630",
            "association_id": "eipassoc-004213bc13745b93c",
            "domain": "vpc",
            "id": "eipalloc-030c6b591337b9630",
            "instance": "i-0c72e11aeb6acbe4b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0144c30abd9fee37a",
            "private_dns": "ip-10-0-32-247.ec2.internal",
            "private_ip": "10.0.32.247",
            "public_dns": "ec2-54-166-96-158.compute-1.amazonaws.com",
            "public_ip": "54.166.96.158",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ipfs_host",
            "aws_security_group.allow_ipfs",
            "aws_security_group.allow_ssh",
            "aws_subnet.ipfs_subnet",
            "data.aws_ami.ubuntu",
            "data.cloudinit_config.ipfs_bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ipfs_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079ca844e323047c2",
            "arn": "arn:aws:ec2:us-east-1:486009190107:instance/i-0c72e11aeb6acbe4b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c72e11aeb6acbe4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-deployer-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0144c30abd9fee37a",
            "private_dns": "ip-10-0-32-247.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.32.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c9d7193fd6df650",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00d3295b6f26d2bf5",
              "sg-089768d418da32c41"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017c3496e82477699",
            "tags": {
              "Name": "ipfs_host",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Name": "ipfs_host",
              "Terraform": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00d3295b6f26d2bf5",
              "sg-089768d418da32c41"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ipfs",
            "aws_security_group.allow_ssh",
            "aws_subnet.ipfs_subnet",
            "data.aws_ami.ubuntu",
            "data.cloudinit_config.ipfs_bootstrap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ipfs_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:internet-gateway/igw-05eaedb7653649437",
            "id": "igw-05eaedb7653649437",
            "owner_id": "486009190107",
            "tags": {
              "Name": "ipfs_gw"
            },
            "tags_all": {
              "Name": "ipfs_gw"
            },
            "vpc_id": "vpc-0c901d1caddaf7ff7"
          },
          "dependencies": [
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ipfs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:route-table/rtb-016b67200eb083a45",
            "id": "rtb-016b67200eb083a45",
            "owner_id": "486009190107",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eaedb7653649437",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ipfs_route_table"
            },
            "tags_all": {
              "Name": "ipfs_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c901d1caddaf7ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ipfs_gw",
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edfe314dc9a1a391",
            "route_table_id": "rtb-016b67200eb083a45",
            "subnet_id": "subnet-017c3496e82477699"
          },
          "dependencies": [
            "aws_internet_gateway.ipfs_gw",
            "aws_route_table.ipfs_route_table",
            "aws_subnet.ipfs_subnet",
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ipfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:security-group/sg-00d3295b6f26d2bf5",
            "description": "Allow ipfs traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d3295b6f26d2bf5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ipfs",
            "name_prefix": "",
            "owner_id": "486009190107",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c901d1caddaf7ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:security-group/sg-089768d418da32c41",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089768d418da32c41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "486009190107",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c901d1caddaf7ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ipfs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:subnet/subnet-017c3496e82477699",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017c3496e82477699",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "486009190107",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0c901d1caddaf7ff7"
          },
          "dependencies": [
            "aws_vpc.ipfs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ipfs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:486009190107:vpc/vpc-0c901d1caddaf7ff7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-009e8d4d61499c027",
            "default_route_table_id": "rtb-00069fd92afc68edb",
            "default_security_group_id": "sg-0bb01628075ddda62",
            "dhcp_options_id": "dopt-0938725e651c2bef2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c901d1caddaf7ff7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00069fd92afc68edb",
            "owner_id": "486009190107",
            "tags": {
              "Name": "ipfs_vpc"
            },
            "tags_all": {
              "Name": "ipfs_vpc"
            }
          }
        }
      ]
    }
  ]
}